maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:-22: error: Unmatched closing brace '}' ignored here
	}
        ^JediEscaper:-21: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^JediEscaper:-17: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^JediEscaper:2: error: illegal start of statement (no modifiers allowed here)
override def run(){
^JediEscaper:34: error: ')' expected but 'if' found.
     if(!aMurNord(getX(),getY()-1) && getIndication(getX(),getY()+1)<ind){
     ^JediEscaper:37: error: ';' expected but 'if' found.
     if(!aMurOuest(getX()+1,get(Y)) && getIndication(getX()+1,getY())<ind){
     ^